--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.CollectionCatalog" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.CollectionCatalog" parent="Theme.Material3.DayNight.NoActionBar" />
     <style name="Theme.App.Starting" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">
             @mipmap/ic_launcher_background
